# stellar-app-os

./: .dockerignore  .env.example  CONTRACTS.md  Dockerfile  PR_SPECIES_SEEDER_554.md  README.md  commitlint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
contracts/: Cargo.toml
contracts/admin-controls/: Cargo.toml
contracts/admin-controls/src/: lib.rs
contracts/aggregate-impact-verifier/: Cargo.toml
contracts/aggregate-impact-verifier/src/: lib.rs
contracts/carbon-marketplace/: Cargo.toml
contracts/carbon-marketplace/src/: lib.rs
contracts/contract-utils/: Cargo.toml
contracts/contract-utils/src/: lib.rs
contracts/donation-escrow/: Cargo.toml
contracts/donation-escrow/src/: lib.rs
contracts/escrow/: Cargo.toml
contracts/escrow-milestone/: Cargo.toml
contracts/escrow-milestone/src/: lib.rs
contracts/escrow/src/: lib.rs
contracts/farmer-registry/: Cargo.toml
contracts/farmer-registry/src/: lib.rs
contracts/harvesta-errors/: Cargo.toml
contracts/harvesta-errors/src/: lib.rs
contracts/kyc-attestation/: Cargo.toml
contracts/kyc-attestation/src/: lib.rs
contracts/location-proof/: Cargo.toml
contracts/location-proof/src/: lib.rs
contracts/naira-payout/: Cargo.toml
contracts/naira-payout/src/: lib.rs
contracts/nullifier-registry/: Cargo.toml
contracts/nullifier-registry/src/: lib.rs
contracts/species-registry/: Cargo.toml
contracts/species-registry/src/: lib.rs
contracts/species-voting/: Cargo.toml  README.md
contracts/species-voting/src/: lib.rs
contracts/subscription-sponsorship/: Cargo.toml
contracts/subscription-sponsorship/src/: lib.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs
contracts/tree-escrow/: Cargo.toml
contracts/tree-escrow/src/: lib.rs
contracts/tree-token/: Cargo.toml
contracts/tree-token/src/: lib.rs
contracts/verifier-staking/: Cargo.toml
contracts/verifier-staking/src/: lib.rs
contracts/zk-location-verifier/: Cargo.toml
contracts/zk-location-verifier/src/: lib.rs
(+145 files in other folders)
