[workspace]
members = [
    "harvesta-errors",
    "nullifier-registry",
    "escrow-milestone",
    "tree-escrow",
    "farmer-registry",
    "donation-escrow",
    "zk-location-verifier",
    "location-proof",
    "naira-payout",
    "aggregate-impact-verifier",
    "tree-token",
    "admin-controls",
    "kyc-attestation",
    "species-registry",
    "verifier-staking",
    "carbon-marketplace",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"
