[package]
name = "tree-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
contract-utils = { path = "../contract-utils" }
soroban-sdk = { version = "21.7.7", features = ["alloc"] }
harvesta-errors = { path = "../harvesta-errors" }

[dev-dependencies]
contract-utils = { path = "../contract-utils" }
soroban-sdk = { version = "21.7.7", features = ["testutils", "alloc"] }
proptest = "1.5.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
